[gd_scene load_steps=31 format=3 uid="uid://je3j0pd8ickv"]

[ext_resource type="Script" path="res://Scenes/splish.gd" id="1_34yo7"]
[ext_resource type="Texture2D" uid="uid://dv2xu7gwyylr4" path="res://Art/Splish/BailingWater/BailG.png" id="2_605ja"]
[ext_resource type="Texture2D" uid="uid://kufse2g7u1ey" path="res://Art/Splish/Idle/SplishIdle.png" id="2_fplbu"]
[ext_resource type="Texture2D" uid="uid://dqr781k77ceq6" path="res://Art/Splish/BailingWater/BailA.png" id="3_82va4"]
[ext_resource type="Texture2D" uid="uid://dtjdl0s3vvtwi" path="res://Art/Splish/Pointing/SplishPointB.png" id="3_511pc"]
[ext_resource type="Texture2D" uid="uid://objic60e65pa" path="res://Art/Splish/Walking Down/SplishWalkDownA.png" id="3_etvg6"]
[ext_resource type="Texture2D" uid="uid://d1fhwln4ofy68" path="res://Art/Splish/Pointing/SplishPointA.png" id="4_6u4r1"]
[ext_resource type="Texture2D" uid="uid://gfa5b1feeydk" path="res://Art/Splish/Walking Down/SplishWalkDownB.png" id="4_bdiwf"]
[ext_resource type="Texture2D" uid="uid://8nfrfdhrlxkh" path="res://Art/Splish/BailingWater/BailB.png" id="4_thdcp"]
[ext_resource type="Texture2D" uid="uid://dhmncs1vrrnmq" path="res://Art/Splish/BailingWater/BailC.png" id="5_f5d2l"]
[ext_resource type="Texture2D" uid="uid://cmh83m2yj0glw" path="res://Art/Splish/Walking Up/SplishWalkUpA.png" id="5_ksqji"]
[ext_resource type="Texture2D" uid="uid://d1w5ctdvu5gry" path="res://Art/Splish/BailingWater/BailD.png" id="6_u1vbr"]
[ext_resource type="Texture2D" uid="uid://brexb1buc6y5" path="res://Art/Splish/Walking Up/SplishWalkUpB.png" id="6_y3bk3"]
[ext_resource type="Texture2D" uid="uid://dy85egcjabti0" path="res://Art/Splish/BailingWater/BailE.png" id="7_8d6j1"]
[ext_resource type="Texture2D" uid="uid://cxmjwulkb3rnq" path="res://Art/Splish/BailingWater/BailF.png" id="8_vlu8v"]
[ext_resource type="PackedScene" uid="uid://dbwv6ry1wdjpo" path="res://Scenes/sfx_manager.tscn" id="9_r3uhy"]
[ext_resource type="AudioStream" uid="uid://dsl2r5ouyucqa" path="res://Audio/hail_grunt.mp3" id="10_2tv06"]
[ext_resource type="AudioStream" uid="uid://djsabwgbhue80" path="res://Audio/assign_grunt.mp3" id="11_ke8qv"]
[ext_resource type="AudioStream" uid="uid://c4wwmhh1pltjm" path="res://Audio/boot_step2.mp3" id="12_4oj1e"]
[ext_resource type="AudioStream" uid="uid://uac7k4tadqyl" path="res://Audio/Actions/Bailing/throwing_water.wav" id="20_xmxqh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_48aad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_605ja")
}, {
"duration": 1.0,
"texture": ExtResource("3_82va4")
}, {
"duration": 1.0,
"texture": ExtResource("4_thdcp")
}, {
"duration": 1.0,
"texture": ExtResource("5_f5d2l")
}, {
"duration": 1.0,
"texture": ExtResource("6_u1vbr")
}, {
"duration": 1.0,
"texture": ExtResource("7_8d6j1")
}, {
"duration": 1.0,
"texture": ExtResource("8_vlu8v")
}],
"loop": true,
"name": &"bail_water",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fplbu")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_511pc")
}, {
"duration": 1.0,
"texture": ExtResource("4_6u4r1")
}],
"loop": false,
"name": &"pointing_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_etvg6")
}, {
"duration": 1.0,
"texture": ExtResource("4_bdiwf")
}],
"loop": true,
"name": &"walking_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ksqji")
}, {
"duration": 1.0,
"texture": ExtResource("6_y3bk3")
}],
"loop": true,
"name": &"walking_up",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f3ojv"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nx1hd"]
radius = 28.0

[sub_resource type="Animation" id="Animation_jr7t7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_m7eue"]
resource_name = "bail_water_2"
length = 1.16668
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"bail_water"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_bail_puddle"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SFXManager")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.833333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["ThrowWater"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_0g00q"]
resource_name = "idle"
length = 0.20002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_t3dpn"]
resource_name = "pointing_right"
length = 0.500025
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"pointing_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_uhby7"]
resource_name = "walking_down"
length = 0.500025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walking_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFXManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["BootStepHigh"],
"method": &"play"
}, {
"args": ["BootStepLow"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_y4fll"]
resource_name = "walking_up"
length = 0.500025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walking_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFXManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["BootStepHigh"],
"method": &"play"
}, {
"args": ["BootStepLow"],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iikno"]
_data = {
"RESET": SubResource("Animation_jr7t7"),
"bail_water": SubResource("Animation_m7eue"),
"idle": SubResource("Animation_0g00q"),
"pointing_right": SubResource("Animation_t3dpn"),
"walking_down": SubResource("Animation_uhby7"),
"walking_up": SubResource("Animation_y4fll")
}

[node name="Splish" type="CharacterBody2D"]
z_index = 3
collision_mask = 10
motion_mode = 1
script = ExtResource("1_34yo7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_48aad")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f3ojv")

[node name="InteractableRange" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableRange"]
shape = SubResource("CircleShape2D_nx1hd")

[node name="SFXManager" parent="." instance=ExtResource("9_r3uhy")]

[node name="AddFollower" type="AudioStreamPlayer" parent="SFXManager"]
stream = ExtResource("10_2tv06")
volume_db = -5.0

[node name="AssignFollower" type="AudioStreamPlayer" parent="SFXManager"]
stream = ExtResource("11_ke8qv")
volume_db = -5.0

[node name="BootStepHigh" type="AudioStreamPlayer" parent="SFXManager"]
stream = ExtResource("12_4oj1e")
volume_db = -4.0
pitch_scale = 1.4

[node name="BootStepLow" type="AudioStreamPlayer" parent="SFXManager"]
stream = ExtResource("12_4oj1e")
volume_db = -4.0
pitch_scale = 1.2

[node name="ThrowWater" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("20_xmxqh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iikno")
}
autoplay = "idle"

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[connection signal="body_entered" from="InteractableRange" to="." method="_on_interactable_range_body_entered"]
[connection signal="body_exited" from="InteractableRange" to="." method="_on_interactable_range_body_exited"]
